compatibility upgrade to JDK 16 and Forge for MC 1.17.1
* update JDK 8 -> 16
** this required updates of relocated JSON library
** update code for use of new class type "record" for IExtensionPoint.DisplayTest
* update MC version 1.16.5 -> 1.17.1
* update Forge 36.2.2 -> 37.0.43
** ExtensionPoint -> IExtensionPoint
** update event registration mechanic
** yet another Vector3D refactor -.- (net.minecraft.util.math.vector.Vector3d -> net.minecraft.world.phys.Vec3)
** update code because of removal of TextComponentUtils
* update Gradle 7.1.1 -> 7.2-20210702220150+0000
* update Forge meta files
* remove obsolete Forge meta files
* remove outdated netbean project file
* update git config based on forge's default settings

solves #49